<resources>
    <string name="app_name">CarInsrance</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="action_logout">更换帐号</string>
    <string name="action_about_app">关于与建议</string>
    <string name="network_error">网络错误，请检查您的网络连接</string>
    <string name="dialog_OK">确定</string>
    <string name="dialog_Cancel">取消</string>
    <string name="dialog_error_title">错误</string>
    <string name="dialog_message_title">提示</string>
    <string name="dialog_message_success">成功</string>
    <string name="dialog_text_wait">请等待</string>

    <string name="login_input_user_name">请输入名字</string>
    <string name="login_input_user_password">请输入密码</string>
    <string name="login_button_login">登录</string>
    <string name="login_button_register">注册</string>
    <string name="login_button_forget_password">忘记用户名或密码？</string>
    <string name="error_login_error">登陆失败，请确认网络和用户名密码后重试</string>

    <string name="forget_password_find_password_button">发送邮件</string>
    <string name="forget_password_send_email">已发送邮件</string>
    <string name="forget_password_email_error">邮件发送错误，请确认您的邮件地址</string>

    <string name="register_input_user_password_again">请再次输入密码</string>
    <string name="register_input_user_email">请输入E-mail地址</string>
    <string name="error_register_password_not_equals">两次输入密码不一致，请重新输入</string>
    <string name="error_register_password_null">密码不可为空</string>
    <string name="error_register_user_name_null">用户名不可空</string>
    <string name="error_register_email_address_null">E-mail地址不可空</string>
    <string name="error_register_user_name_repeat">用户名已被注册，请重新填写</string>
    <string name="error_register_email_repeat">邮箱已被注册，请更换邮箱</string>
    <string name="success_register_success">注册成功</string>

    <string name="main_view_person_title">我的成就</string>
    <string name="main_view_anytime_title">正在做</string>

    <string name="action_logout_alert_message">确定更换账号么？之前保留的账号信息将被删除。</string>
    <string name="action_about_app_text">
        关于作者:\n\thi，大家好，我是“孤独的猫咪神”。\n\t我的微博是:weibo.com/maomishen\n\t感谢您使用此APP。欢迎对本APP提出您宝贵的意见和建议。
    </string>
    <string name="action_about_app_doing_list_title">我希望在“正在做”中，加入如下的事情:\n我要提意见:</string>
    <string name="action_about_app_submit_doing">提交</string>
    <string name="action_about_app_submit_doing_hint">输入意见或希望添加在“正在做”中的内容。</string>
    <string name="action_about_app_submit_message_success">感谢您的提交。祝您生活愉快。</string>
    <string name="action_about_app_submit_message_error">非常抱歉，提交出错。</string>

    <string name="person_register_time">注册时间:{0}</string>
    <string name="person_achievement_list_null">暂无成就</string>

    <string name="doing_list_wait_loading">正在加载</string>
    <string name="doing_list_error_loading">加载错误，请检查网络</string>

    <string name="doing_detail_loading">努力查询中！</string>
    <string name="doing_detail_same_time_title">与您同时在{0}的人有</string>
    <string name="doing_detail_person">人</string>
    <string name="doing_detail_get_achievement_title">本次获得的成就</string>
    <string name="doing_detail_achievement_null">没有获得成就T.T</string>


    <string name="nav_home">首页</string>
    <string name="nav_mycoustomer">客户信息</string>
    <string name="nav_mycarinsacne">定损资料</string>
    <string name="nav_fixlist">附近维修</string>
    <string name="nav_orders">推送订单</string>
    <string name="nav_about">关于</string>
    <string name="nav_setting">设置</string>
    <string name="title_activity_settings">设置</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_carinsrance_list">Items</string>
    <string name="title_carinsrance_detail">CarInsrance Detail</string>
    <string name="lorem_ipsum">Material Design语言[1]  的一些重要功能包括 系统字体Roboto的升级版本 ，同时颜色更鲜艳，动画效果更突出。杜拉特还简要谈到了新框架的一些变化——这个新框架也于今天在 google.com/design 公开发布。谷歌的想法是让谷歌平台上的开发者掌握这个新框架，从而让所有应用就有统一的外观，就像是苹果向开发者提出的设计原则一样。谷歌还基于这种新的设计语言对本公司旗舰应用进行了重新设计，包括安卓和网页端的Gmail和Calendar。大家可能还会记得，看到过有关这些变动的文章， 有些博客 已经掌握了外泄截屏，显示经过了重新设计的Gmail，界面更干净、更简约。在安卓平台上，这种新界面被称为Material，支持各种新动画效果，具有内置的实时UI阴影，以及可在不同屏幕之间切换的hero元素。</string>

</resources>
